[gd_scene load_steps=3 format=3 uid="uid://datst2x2p8jdv"]

[ext_resource type="PackedScene" uid="uid://d224iq2bnuuvn" path="res://src/UI/Components/input_with_slider.tscn" id="1_46tf1"]
[ext_resource type="Script" path="res://src/UI/Styles/perspective.gd" id="1_fw41e"]

[node name="Perspective" type="VBoxContainer"]
offset_right = 200.0
offset_bottom = 155.0
script = ExtResource("1_fw41e")

[node name="CullBackContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CullBackCheckButton" type="CheckButton" parent="CullBackContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "Cull Back"

[node name="FOVContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FOVContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "FOV
"

[node name="FOVInput" parent="FOVContainer" instance=ExtResource("1_46tf1")]
layout_mode = 2
size_flags_horizontal = 3
text = "90"
step = 0.5
max_value = 179.0
min_value = 1.0

[node name="XContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="XContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X
"

[node name="XInput" parent="XContainer" instance=ExtResource("1_46tf1")]
layout_mode = 2
size_flags_horizontal = 3
step = 0.5
max_value = 180.0
min_value = -180.0

[node name="YContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="YContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y"

[node name="YInput" parent="YContainer" instance=ExtResource("1_46tf1")]
layout_mode = 2
size_flags_horizontal = 3
step = 0.5
max_value = 180.0
min_value = -180.0

[node name="InsertContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="InsertContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Insert"

[node name="InsertInput" parent="InsertContainer" instance=ExtResource("1_46tf1")]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
max_value = 1.0

[connection signal="toggled" from="CullBackContainer/CullBackCheckButton" to="." method="_on_cull_back_check_button_toggled"]
[connection signal="changed" from="FOVContainer/FOVInput" to="." method="_on_fov_input_changed"]
[connection signal="changed" from="XContainer/XInput" to="." method="_on_x_input_changed"]
[connection signal="changed" from="YContainer/YInput" to="." method="_on_y_input_changed"]
[connection signal="changed" from="InsertContainer/InsertInput" to="." method="_on_insert_input_changed"]
